--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="noindex, nofollow">
-<title></title>
+<title>Patrick's and Buckner</title>
 <link rel="dns-prefetch" href="https://s0.wp.com/">
 <link rel="dns-prefetch" href="https://wordpress.com/">
 <link href="https://fonts.gstatic.com/" crossorigin="" rel="preconnect">
