--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming983.wordp
 
 <!-- Jetpack Open Graph Tags -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="(no title)">
+<meta property="og:title" content="Patrick's and Buckner">
 <meta property="og:url" content="https://patgaming983.wordpress.com/">
 <meta property="og:image" content="https://patgaming983.files.wordpress.com/2022/08/287135274_866170117581741_5755245847987421984_n-1.jpg">
 <meta property="og:image:alt" content="">
