--- a/index.html
+++ b/index.html
@@ -964,16 +964,16 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming983.wordp
 <!-- Jetpack Open Graph Tags -->
 <meta property="og:type" content="website">
 <meta property="og:title" content="Patrick's and Buckner">
-<meta property="og:url" content="https://patgaming983.wordpress.com/">
-<meta property="og:image" content="https://patgaming983.files.wordpress.com/2022/08/287135274_866170117581741_5755245847987421984_n-1.jpg">
+<!-- <meta property="og:url" content="https://patgaming983.wordpress.com/"> -->
+<meta property="og:image" content="https://github.com/patgaming101/patgaming101.github.io/blob/main/room.jpg">
 <meta property="og:image:alt" content="">
 <meta property="og:locale" content="en_US">
-<meta property="fb:app_id" content="249643311490">
-<meta property="article:publisher" content="https://www.facebook.com/WordPresscom">
+<!-- <meta property="fb:app_id" content="249643311490">
+<meta property="article:publisher" content="https://www.facebook.com/WordPresscom"> -->
 <meta name="twitter:text:title" content="Home">
-<meta name="twitter:image" content="https://patgaming983.files.wordpress.com/2022/08/287135274_866170117581741_5755245847987421984_n-1.jpg?w=144">
+<meta name="twitter:image" content="https://github.com/patgaming101/patgaming101.github.io/blob/main/room.jpg">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:description" content="Visit the post for more.">
+<meta name="twitter:description" content="Win-WIn-WIN">
 
 <!-- End Jetpack Open Graph Tags -->
 <link rel="shortcut icon" type="image/x-icon" href="https://s0.wp.com/i/favicon.ico" sizes="16x16 24x24 32x32 48x48">
