--- a/index.html
+++ b/index.html
@@ -997,9 +997,9 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming983.wordp
 
 	
 	
-<img src="imagepat.png" style="width:500px;height:600px;">	
+<img src="imagepat.png" style="width:490px;height:800px;">	
 	</br>
-<img src="gifff.gif">
+<img src="bgifff.gif" style="width:490px;height:800px;">
 
 	
 
