--- a/index.html
+++ b/index.html
@@ -1019,8 +1019,8 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming983.wordp
 
 	
 	
-<img src="imagepat.png" style="width:490px;height:800px;">	
-	</br>
+<!-- <img src="imagepat.png" style="width:490px;height:800px;">	 -->
+<!-- 	</br> -->
 <img src="bgifff.gif" style="width:490px;height:800px;">
 
 	
