--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta property=’og:title’ content="Patrick's and Buckner"/>
-<meta property=’og:image’ content="room.jpg"/>
-<!-- <meta property=’og:description’ content='DESCRIPTION OF YOUR SITE'/> -->
-<meta property=’og:url’ content='https://patgaming101.github.io'/>
-<meta property='og:image:width' content='1200' />
-<meta property='og:image:height' content='627' /><!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
-<meta property="og:type" content='website'/>
+<meta property="og:image" content="room.jpg"/>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
