--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-<meta property=’og:title’ content="Patrick's and Buckner"/>
+<meta property=’og:title’ content="$$ Patrick's and Buckner --"/>
 <meta property="og:image" content="https://ibb.co/x513ZWz"/>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
