--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
 	
 	
-<title>Patrick's and Buckner</title>
+<title>$$ Patrick's and Buckner</title>
 <link rel="dns-prefetch" href="https://s0.wp.com/">
 <link rel="dns-prefetch" href="https://wordpress.com/">
 <link href="https://fonts.gstatic.com/" crossorigin="" rel="preconnect">
