--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming101.githu
 
 
 
-<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://highrollersweep.cc/download.html" style="border-radius:100px;">HighRoller</a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://download-plus.oss-us-west-1.aliyuncs.com/highroller/HighRoller.apk" style="border-radius:100px;">HighRoller</a></div>
 
 
 
