--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming101.githu
 
 <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://download.gamevault999.com/" style="border-radius:100px;">GameVault</a></div>
 
-
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="http://firekirin.xyz:8580/index.html" style="border-radius:100px;">FireKirin</a></div>
 
 <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://dl.juwa777.com/" style="border-radius:100px;">Juwa</a></div>
 
