--- a/index.html
+++ b/index.html
@@ -1027,8 +1027,8 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming101.githu
 	
 <!-- <img src="imagepat.png" style="width:490px;height:800px;">	 -->
 <!-- 	</br> -->
-<img src="bgifff.gif" style="width:490px;height:800px;">
-
+<!-- <img src="svgf.svg.gif" style="width:490px;height:800px;"> -->
+<img src="svgf.svg.gif" style="width:1300px;height:3000px;">
 	
 
 		
