--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming101.githu
 <!-- <img src="imagepat.png" style="width:490px;height:800px;">	 -->
 <!-- 	</br> -->
 <!-- <img src="svgf.svg.gif" style="width:490px;height:800px;"> -->
-<img src="svgf.svg.gif" style="width:1300px;height:3000px;">
+<img src="bsvg.svg" style="width:1300px;height:3000px;">
 	
 
 		
