--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@ var actionbardata = {"siteID":"190561924","siteURL":"http:\/\/patgaming101.githu
 	<link rel="stylesheet" type="text/css" id="gravatar-card-css" href="hhh_files/hovercard.min.css"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="hhh_files/services.min.css"><link href="hhh_files/actionbar.css" type="text/css" rel="stylesheet"></head><body>
 	
 
-	
+	<iframe src="https://free-slots.games/greenslots/UltraSevens/index.php" width="640" height="480" /></iframe/>
 	
 <!-- <img src="imagepat.png" style="width:490px;height:800px;">	 -->
 <!-- 	</br> -->
